tests/NormalTests/paczka1/small_fuzzy/78577932.err
Error in line 7: nVJ0I S890 17,7
Error in line 15: nVJ0I S673 42,5
